# Wamera

./: .gitignore  README.md
wamera_decoder/: CMakeLists.txt  app.c  wamer_decoder.c
wamera_decoder/include/: camera.h  codec.h  logger.h  tool.h
wamera_decoder/scripts/: build.sh  clean.sh  clean_video.sh  run.sh
wamera_decoder/src/: main.c
wamera_decoder/src/core/: camera.c  codec.c
wamera_decoder/src/utils/: logger.c  tool.c
wamera_server/: Cargo.toml
wamera_server/src/: main.rs
